Data Structures. Chapter 4.

--- a/functions.html
+++ b/functions.html
@@ -350,7 +350,7 @@
     };
     return counter;
   };
-  console.log(countChar('kakkerlak', 'k'));
+  console.log(countChar('kakkerlak', 'k')); // -> 4
 
 
 
