--- a/data_structures.html
+++ b/data_structures.html
@@ -355,7 +355,7 @@
   console.log("   okay \n".trim());          // → okay
 
   // 'charAt'        access individual characters.
-  console.log(string.charAt(1));             // → b
+  console.log(myString.charAt(1));             // → i
 
   // --------------------------------------------------------------------------
   
@@ -385,6 +385,32 @@
     journal.push(entry);
   }
   addEntry(true, 'work', 'touched tree', 'pizza', 'running', 'tv');
+
+  // --------------------------------------------------------------------------
+  
+  // The Math Object
+  // ---------------
+
+  // Trigonomery:    cos (cosine), sin (sine), tan (tangent), and their inverse 
+  //                 functions: acos, asin, atan. Also PI (π).
+
+  // 'Math.random()' returns a new pseudo-random number between zero (inclusive)
+  //                 and one (exclusive) every time it's called.
+  function randomPointOnCircle(radius) {
+    var angle = Math.random() * 2 * Math.PI;
+    return {x: radius * Math.cos(angle),
+            y: radius * Math.sin(angle)};
+  };
+  console.log(randomPointOnCircle(2));       // → {x: 0.3667, y: 1.966}
+
+  // 'Math.floor()'  rounds down to the nearest whole number on Math.random result.
+  console.log(Math.floor(Math.random() * 10));
+  // → 9
+
+  // 'Math.ceil()'   rounds up to a whole number.
+  // 'Math.round()'  rounds to the nearest whole number.
+
+  
 
 </script>
 </body>
