--- a/data_structures.html
+++ b/data_structures.html
@@ -509,6 +509,61 @@
   reverseArrayInPlace(theArray);
   console.log(theArray);                     // → ["f", "e", "d", "c", "b", "a"]
 
+
+  // 3. A List
+  //    ------
+  
+  // A 'list' is a nested set of objects, with the first object holding a 
+  // reference to the second, the second to the third, and so on.
+
+  
+  // Write a function 'arrayToList' that builds a list when given [1, 2, 3] as
+  // argument.
+  function arrayToList(array) {
+    var list = undefined;
+    for (var i = array.length - 1; i >= 0; i -= 1) {
+      list = {value: array[i], rest: list};
+    }
+    return list;
+  }
+  console.log(arrayToList([10, 20]));        // → Object {value: 10, rest: Object}
+
+  
+  // Write a function 'listToArray' that produces an array from a list
+  function listToArray(list) {
+    var newArray = [];
+    for (var x = list; x; x = x.rest) {
+      newArray.push(x.value);
+    }
+    return newArray;
+  };
+  console.log(listToArray(arrayToList([10, 20, 30]))); 
+  // → [10, 20, 30]
+
+
+  // Write a helper function 'prepend', which takes an element and a list and
+  // creates a new list that adds the element to the front of the input list.
+  function prepend(element, list) {
+    return {value: element, rest: list};
+  };
+  console.log(prepend(10, prepend(20, null)));         
+  // → Object {value: 10, rest: Object}
+
+
+  // Write a function 'nth' that takes a list and a number and returns the element
+  // at the given position in the list, ot undefined when there is no such element.
+  function nth(list, number) {
+    if (!list) {
+      return undefined;
+    } else if (number == 0) {
+      return list.value;
+    } else {
+      return nth(list.rest, number - 1);
+    }
+  };
+  console.log(nth(arrayToList([10, 20, 30]), 1));
+  // → 20
+  
 </script>
 </body>
 </html>
