--- a/data_structures.html
+++ b/data_structures.html
@@ -11,7 +11,6 @@
   // ===================================
   
   // --------------------------------------------------------------------------
-
   // Methods
   // -------
   var doh = 'Doh';
@@ -30,7 +29,6 @@
   console.log(mack);
 
   // --------------------------------------------------------------------------
-
   // Objects
   // -------
 
@@ -86,9 +84,9 @@
   ];
 
   // --------------------------------------------------------------------------
-
   // Mutability
   // ----------
+
   // With objects there is a difference between having two references to the
   // same object and having two different objects that contain the same properties.
   
@@ -120,10 +118,9 @@
   addEntry(['weekend', 'cycling', 'break', 'peanuts', 'beer'], true);
 
   // --------------------------------------------------------------------------
-  
+  // Correlation:
+  // ------------
   /*
-  Correlation:
-  ------------
     Is a measure of dependence between variables (in the statistical sense).
     It's expressed as a coefficient that ranges from -1 to 1:
     -1 (perfectly opposites) 
@@ -141,7 +138,8 @@
         ϕ = ----------------------
             Math.sqrt(n1•n0•n1•n0)
   */
- 
+  
+  // --------------------------------------------------------------------------
   // Computing Correlation
   // ---------------------
   // We'll represent a two-by-two table in Javascript with a four-element array:
@@ -190,7 +188,6 @@
   console.log(tableFor('pizza', JOURNAL));   // → [76, 9, 4, 1]
 
   // --------------------------------------------------------------------------
-  
   // Objects as Maps
   // ---------------
   // How should we store these correlations once we compute them?
@@ -213,7 +210,8 @@
 
   // A map is a way to go from values in one domain (in this case, event names) 
   // to corresponding values in another domain (in this case, ϕ coefficients).
-
+  
+  // --------------------------------------------------------------------------
   // Looping through Objects:
   // ------------------------
   for (var event in map) {
@@ -223,7 +221,6 @@
   // → The correlation for 'touched tree' is -0.081
 
   // --------------------------------------------------------------------------
-  
   // The Final Analysis
   // ------------------
   // To find all the types of events that are present in the data set, we simply 
@@ -288,7 +285,6 @@
   // brush his teeth!
   
   // --------------------------------------------------------------------------
-
   // Further Arraylogy
   // -----------------
 
@@ -336,7 +332,6 @@
   // → ['a', 'b', 'd', 'e']
 
   // --------------------------------------------------------------------------
-  
   // Strings and their Properties
   // ----------------------------
 
@@ -358,7 +353,6 @@
   console.log(myString.charAt(1));             // → i
 
   // --------------------------------------------------------------------------
-  
   // The Arguments Object
   // --------------------
   // In Javascript you are allowed to pass more (or fewer) arguments to a function
@@ -387,7 +381,6 @@
   addEntry(true, 'work', 'touched tree', 'pizza', 'running', 'tv');
 
   // --------------------------------------------------------------------------
-  
   // The Math Object
   // ---------------
 
@@ -410,8 +403,7 @@
   // 'Math.ceil()'   rounds up to a whole number.
   // 'Math.round()'  rounds to the nearest whole number.
 
-  // --------------------------------------------------------------------------
-  
+  // --------------------------------------------------------------------------  
   // The Global Object
   // -----------------
   // The global scope can also be approached as an object in Javascript.
@@ -425,8 +417,9 @@
   // EXERCISES //
   // ========= //
 
+  // --------------------------------------------------------------------------
   // 1. The Sum of a Range
-  //    ------------------
+  // ---------------------
 
   // Write a function that takes two arguments, 'start' and 'end', and returns an 
   // array containing all the numbers from 'start' up to (and including) 'end'.
@@ -477,9 +470,9 @@
   console.log(otherRange(10, 15));           // → [10, 11, 12, 13, 14, 15]
   console.log(otherRange(10, 20, 2));        // → [10, 12, 14, 16, 18, 20]
 
-  
+  // --------------------------------------------------------------------------
   // 2. Reversing an Array
-  //    ------------------
+  // ---------------------
 
   var theArray = ['a', 'b', 'c', 'd', 'e', 'f'];
 
@@ -509,9 +502,9 @@
   reverseArrayInPlace(theArray);
   console.log(theArray);                     // → ["f", "e", "d", "c", "b", "a"]
 
-
+  // --------------------------------------------------------------------------
   // 3. A List
-  //    ------
+  // ---------
   
   // A 'list' is a nested set of objects, with the first object holding a 
   // reference to the second, the second to the third, and so on.
@@ -564,9 +557,9 @@
   console.log(nth(arrayToList([10, 20, 30]), 1));
   // → 20
 
-
+  // --------------------------------------------------------------------------
   // 4. Deep Comparison
-  //    ---------------
+  // ------------------
 
   // Write a function deepEqual that takes two values and returns true only if
   // they are the same value or are objects with the same properties whose values
