--- a/functions.html
+++ b/functions.html
@@ -9,7 +9,7 @@
   // FUNCTIONS
   // =========
 
-
+  // --------------------------------------------------------------------------
   // Defining a Function
   // -------------------
   
@@ -35,7 +35,7 @@
   };
   console.log(power(2, 10)); // -> 1024
 
-  
+  // --------------------------------------------------------------------------
   // Parameters and Scopes
   // ---------------------
   // Variables created inside of functions, including their parameters, are 
@@ -56,7 +56,7 @@
   f2();
   console.log(x); // -> inside f2
 
-
+  // --------------------------------------------------------------------------
   // Nested Scope
   // ------------
   // Functions can be created inside other functions, producing several degrees
@@ -92,7 +92,7 @@
     variables defined inside landscape.
   */
 
-
+  // --------------------------------------------------------------------------
   // Functions as Values
   // -------------------
   // a variable that holds a function is still just a regular variable and can
@@ -107,8 +107,8 @@
       console.log('not launched...');
     }    
   };
-
-
+  
+  // --------------------------------------------------------------------------
   // Declaration Notation
   // --------------------
 
@@ -133,9 +133,10 @@
     }    
   };
 
-
+  // --------------------------------------------------------------------------
   // Optional Arguments
   // ------------------
+
   // Extra arguments are simply ignored in Javascript
 
   function power(base, exponent) {
@@ -151,9 +152,10 @@
   console.log(power(4));    // -> 16
   console.log(power(4, 3)); // -> 64
 
-
+  // --------------------------------------------------------------------------
   // Closure
   // -------
+
   // What happens to local variables when the function call that created them
   // is no longer active? -> The variable can still be accessed.
 
@@ -179,9 +181,10 @@
   var twice = multiplier(2);
   console.log(twice(5)); // -> 10
 
-
+  // --------------------------------------------------------------------------
   // Recursion
   // ---------
+
   // A function that calls itself is called 'recursive'.
 
   function power(base, exponent) {
@@ -209,8 +212,8 @@
     return find(1, "1"); 
   };
   console.log(findSolution(24)); // -> (((1 * 3) + 5) * 3)
-
-
+  
+  // --------------------------------------------------------------------------
   // Growing Functions
   // -----------------
 
@@ -280,7 +283,7 @@
   };
   printFarmInventory(7, 16, 3);
 
-
+  // --------------------------------------------------------------------------
   // Summary
   // -------
 
@@ -294,21 +297,22 @@
     return a * b * 3.5;
   };
 
+  // --------------------------------------------------------------------------
 
   // ========= //
   // EXERCISES //
   // ========= //
 
-
-  // Write a function 'min' that takes two arguments and returns their minimum.
+  // --------------------------------------------------------------------------
+  // 1. Write a function 'min' that takes two arguments and returns their minimum.
   var min = function(x, y) {
     return Math.min(x, y);
   };
   console.log(min(0, 10));  // ->  10
   console.log(min(0, -10)); // -> -10
 
-
-  // Define a recursive function that checks if a number is even
+  // --------------------------------------------------------------------------
+  // 2. Define a recursive function that checks if a number is even
   var isEven = function(number) {
     if (number == 0) {
       return true;
@@ -324,9 +328,9 @@
   console.log(isEven(75));
   console.log(isEven(-1));
 
-
-  // Write a function that takes a string as an argument and returns a number
-  // that indicates how many "B" characters are in the string.
+  // --------------------------------------------------------------------------
+  // 3. Write a function that takes a string as an argument and returns a number
+  //    that indicates how many "B" characters are in the string.
   var countBs = function(string) {
     counter = 0;
     for (var i = 0; i < string.length; i += 1) {
@@ -338,9 +342,9 @@
   };
   console.log(countBs('BBC')); // -> 2
 
-
-  // Write a function countChar that behaves like 'countBs', but takes 2 
-  // arguments, one for the string and one for the character to find.
+  // --------------------------------------------------------------------------
+  // 4. Write a function countChar that behaves like 'countBs', but takes 2 
+  //    arguments, one for the string and one for the character to find.
   var countChar = function(string, char) {
     counter = 0;
     for (var i = 0; i < string.length; i += 1) {
