--- a/program_structure.html
+++ b/program_structure.html
@@ -7,7 +7,8 @@
 
   // PROGRAM STRUCTURE
   // =================
-
+  
+  // --------------------------------------------------------------------------
   // Conditional Execution
   // ---------------------
   
@@ -27,7 +28,7 @@
   else
     alert('large')
 
-
+  // --------------------------------------------------------------------------
   // While and Do Loops
   // ------------------
   
@@ -46,7 +47,7 @@
   } while (!name);
   console.log(name);
 
-
+  // --------------------------------------------------------------------------
   // For Loops
   // ---------
 
@@ -69,7 +70,7 @@
   };
   console.log(current);
 
-
+  // --------------------------------------------------------------------------
   // Dispatching on a Value with Switch
   // ----------------------------------
 
@@ -93,8 +94,10 @@
   // EXERCISES //
   // ========= //
 
-  // Looping a Triangle
-  // ------------------
+  // --------------------------------------------------------------------------
+  // 1. Looping a Triangle
+  // ---------------------
+  
   // Write a loop that makes seven calls to console.log to output
   // the following triangle
   // #
@@ -109,9 +112,11 @@
     console.log(pound);
     pound += "#"
   }
+  
+  // --------------------------------------------------------------------------
+  // 2. FizzBuzz
+  // -----------
 
-  // FizzBuzz
-  // --------
   // Print all numbers from 1 to 100. For numbers divisible by 3,
   // print "Fizz", divisible by 5, print "Buzz" and divisible by
   // 3 and 5, print "FizzBuzz"
@@ -126,9 +131,11 @@
       console.log(i);
     }
   };
+  
+  // --------------------------------------------------------------------------
+  // 3. Chess Board
+  // --------------
 
-  // Chess Board
-  // -----------
   // Creates a string that represents an 8x8 grid, using new
   // characters to separate lines. At each position of the grid
   // there is either a space or a '#'. The characters should form
